14.gün sonuna göre kodlarım

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "deniz@deniz.com",
+    "Issuer": "deniz@deniz.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey" //türkçe karakter kullanımı sıkıntılı
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
